fixed vertical overflow

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,5 @@
-body {
-    margin-top: 20px;
-}
-
 main {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     width: 100%;
